@@ -1,3 +1,6 @@
+2007-08-16 Damien Douxchamps http://damien.douxchamps.net/
+        * SVN 418: first changes on the new camera detection API.
+	
 2007-08-15 Damien Douxchamps http://damien.douxchamps.net/
 	* SVN 417: First alpha implementation of the new API for camera
 	           detection. It consists in wrappers around existing
@@ -13,7 +16,7 @@
         * SVN 414: Merged patch from Vladimir Avdonin for the compilation and
 	           use of libdc1394 on MS Windows XP.
 
-2007-07-20 Damien Douxchamps http://damien.douxchamps.net/
+2007-08-03 Damien Douxchamps http://damien.douxchamps.net/
         * SVN 413: Removed unnecessary function to set the color filter
 	           (the latter is read only!). Thanks to Johann Schoonees.
 
